--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps && electron-rebuild -f -v 5.0.8 -w serialport"
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "electron-serve": "^0.3.0",
@@ -23,12 +23,14 @@
     "babel-plugin-import": "^1.12.0",
     "electron": "5.0.8",
     "electron-builder": "^21.1.1",
-    "electron-rebuild": "^1.8.5",
     "next": "^9.0.2",
-    "nextron": "^5.3.1",
+    "nextron": "^5.3.3",
     "null-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.36.1"
+  },
+  "build": {
+    "buildDependenciesFromSource": true
   }
 }
